--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <html>
 <head>
+    <meta charset="UTF-8">
 	<title> Laminar </title>
+    <link rel='stylesheet' type='text/css' href='css/main.css'>
+    <script src="https://use.fontawesome.com/d59afdec51.js"></script>
 </head>
 
 <body>
-	HELLO
+    <header>
+        <div>
+            <h2>Laminar</h2>
+        </div>
+    
+    </header>
+    
+    <div id='greeting'>
+        <h1>What's on your mind?</h1>
+        <form>
+            <input type="text">
+        </form>
+    </div>
 </body>
 
 
