changed title to link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <header>
         <div>
-            <h2>Laminar</h2>
+            <a href='dillonyao.tk/laminar'>Laminar</a>
+        </div>
+        <div id='menu'>
+            <ul>
+            
+            </ul>
         </div>
     
     </header>
