added section class formatting

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     <div id='stats' class='section'>
         <div class='container'>
             <div class='column'>
-                Statistics
+                <h2>Statistics</h2>
+            </div>
+            <div class='column'>
+                Text
             </div>
         </div>
     </div>
@@ -60,7 +63,10 @@
     <div id='about' class='section'>
         <div class='container'>
             <div class='column'>
-                About
+                <h2>About</h2>
+            </div>
+            <div class='column'>
+                "tbh laminar flow is probably the most satisfying thing I can think of" - Alan
             </div>
         </div>
     </div>
