--- a/contribute.html
+++ b/contribute.html
@@ -41,7 +41,7 @@
             </nav>
         </header>
         
-        <div class='container'>
+        <div class='container' id='contribute'>
             <div class='column'>
                 <div class='workspace'>
                     <div class='story-box'>
@@ -75,9 +75,12 @@
                             </p>
                         </div>
                     </div>
-                    <div class='response'>
-                        
-                    </div>
+                </div>
+                <div class='response'>
+                    <form id='contribution_input' action='add_story.py' method='post'>
+                        <textarea id=contribution placeholder='make your mark'></textarea>
+                        <input type="button" onclick="handle_contribution()" value="Submit">
+                    </form>
                 </div>
             </div>
         </div>
