--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </nav>
         </header>
         <div id='greeting'>
-            <h1>Find your story here</h1>
+            <h1>Start your story here</h1>
             <form action='topic.py' method='post'>
                 <input type="text" id="topic" name="topic" placeholder="what's on your mind?">
             </form>
