--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class='logo_container'>
                 <a href='http://dillonyao.tk/laminar'>
                     <div id='logo'>
-                        <img id='logo_img' src='img/logo.png'></img>
-                        <h1>aminar</h1>
+
+                        <h1>Laminar</h1>
                     </div>
                 </a>
             </div>
@@ -42,6 +42,9 @@
             </nav>
         </header>
         <div id='greeting'>
+            <div class='column'>
+                <img id='logo_img' src='img/logo.png'></img>
+            </div>
             <h1>Start your story here</h1>
             <form action='topic.py' method='post'>
                 <input type="text" id="topic" name="topic" placeholder="what's on your mind?">
@@ -73,41 +76,48 @@
                             <span class='name'>Legeng</span>
                         </div>
                         <div class='user'>
-                            Lorem Ipsum taewgaopwgh awhgoiahw oahwogho awgohaweg awogh wighaowpghoawpheoawhg oapwhego gpawhg oaiwpefdsoijwoepg jaowgj oawjg oawgj aopwje goipawj oawjo gjawo joaw jgoapw gjawj
-                        </div>
-                        <div class='quote'>
 
+                        </div>
+                        <ul class='contact'>
+                            <li class='ln'><a href='https://www.linkedin.com/in/legengliu'>Legeng Liu</a></li>
+                            <li class='email'><a href='mailto:legengliu@berkeley.edu'>legengliu@berkeley.edu</a></li>
+                        </ul>
+                        <div class='quote'>
+                            why haven't you put up my picture that's rude as <span id='no'>fuck</span>
                         </div>
                     </div>
                 </div>
                 <div id='rosa' class='infocard'>
                     <div class='column'>
                         <div class='profile'>
-                            <img src='img/grid.jpg'>
+                            <img src='https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAbXAAAAJDFlMGE4MTNkLWYyNjQtNDQyMC04Mzg5LTA3YmI0ZWQxMTdhNg.jpg'>
                             <span class='name'>Rosa</span>
                         </div>
                         <div class='user'>
-                            Lorem Ipsum taewgaopwgh awhgoiahw oahwogho awgohaweg awogh wighaowpghoawpheoawhg oapwhego gpawhg oaiwpefdsoijwoepg jaowgj oawjg oawgj aopwje goipawj oawjo gjawo joaw jgoapw gjawjfq wwgahepoihao ahwpeoighop awgh
+
                         </div>
                         <ul class='contact'>
-                            <li class='ln'>yo</li>
-                            <li class='email'>yo</li>
+                            <li class='ln'><a href='https://www.linkedin.com/in/rosachoe'>Rosa Choe</a></li>
+                            <li class='email'><a href='mailto:rosachoe@berkeley.edu'>rosachoe@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
-
+                            sorry i'm useless
                         </div>
                     </div>
                 </div>
                 <div id='alan' class='infocard'>
                     <div class='column'>
                         <div class='profile'>
-                            <img src='img/grid.jpg'>
+                            <img src='https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAgxAAAAJGZmZWNlNjkxLTVmN2EtNGU5OC05MWQ1LThhOTkzMjkwYTZmNw.jpg'>
                             <span class='name'>Alan</span>
                         </div>
                         <div class='user'>
-                            Lorem Ipsum taewgaopwgh awhgoiahw oahwogho awgohaweg awogh wighaowpghoawpheoawhg oapwhego gpawhg oaiwpefdsoijwoepg jaowgj oawjg oawgj aopwje goipawj oawjo gjawo joaw jgoapw gjawj
 
                         </div>
+                        <ul class='contact'>
+                            <li class='ln'><a href='https://www.linkedin.com/in/alan-zhang-582797112'>Alan Zhang</a></li>
+                            <li class='email'><a href='mailto:alanszhang@berkeley.edu'>alanszhang@berkeley.edu</a></li>
+                        </ul>
                         <div class='quote'>
                             tbh laminar flow is probably the most satisfying thing I can think of
                         </div>
@@ -116,15 +126,15 @@
                 <div id='dillon' class='infocard'>
                     <div class='column'>
                         <div class='profile'>
-                            <img src='img/grid.jpg'>
+                            <img src='https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAX2AAAAJDhhOTY3MjRkLWUwY2ItNDI0Yy1hMjAzLTdhOTQ1ZTFhNDUxNg.jpg'>
                             <span class='name'>Dillon</span>
                         </div>
                         <div class='user'>
-                            Lorem Ipsum taewgaopwgh awhgoiahw oahwogho awgohaweg awogh wighaowpghoawpheoawhg oapwhego gpawhg oaiwpefdsoijwoepg jaowgj oawjg oawgj aopwje goipawj oawjo gjawo joaw jgoapw gjawj
+
                         </div>
                         <ul class='contact'>
-                            <li class='ln'>linked</li>
-                            <li class='email'>dillon.yao@berkeley.edu</li>
+                            <li class='ln'><a href='https://www.linkedin.com/in/dillon-yao-b24329102'>Dillon Yao</a></li>
+                            <li class='email'><a href='mailto:dillon.yao@berkeley.edu'>dillon.yao@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
                             yo
