--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <li class='email'><a href='mailto:rosachoe@berkeley.edu'>rosachoe@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
-                            sorry i'm useless
+                            sorry i'm spoopy
                         </div>
                     </div>
                 </div>
