--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div id='legeng' class='infocard'>
                     <div class='column'>
                         <div class='profile'>
-                            <img src='img/grid.jpg'>
+                            <img src='https://scontent.fsnc1-1.fna.fbcdn.net/t31.0-8/14196168_10206909497836458_7353312691961855103_o.jpg'>
                             <span class='name'>Legeng</span>
                         </div>
                         <div class='user'>
@@ -83,7 +83,7 @@
                             <li class='email'><a href='mailto:legengliu@berkeley.edu'>legengliu@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
-                            why haven't you put up my picture that's rude as <span id='no'>fuck</span>
+                            I love reading about math and Tweeting at Elon Musk in my free time
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                             <li class='email'><a href='mailto:dillon.yao@berkeley.edu'>dillon.yao@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
-                            yo
+                            i'm eecs 
                         </div>
                     </div>
                 </div>
