--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div id='legeng' class='infocard'>
                     <div class='column'>
                         <div class='profile'>
-                            <img src='https://scontent.fsnc1-1.fna.fbcdn.net/t31.0-8/14196168_10206909497836458_7353312691961855103_o.jpg'>
+                            <img src='https://scontent.fsnc1-1.fna.fbcdn.net/v/t1.0-9/13230185_10206271019314894_1897519698154195608_n.jpg?oh=7e738baa71f731e7b031b4ee9c114f3d&oe=58C5555E'>
                             <span class='name'>Legeng</span>
                         </div>
                         <div class='user'>
