--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <li class='email'><a href='mailto:rosachoe@berkeley.edu'>rosachoe@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
-                            sorry i'm spoopy
+                            sorry i'm spoopy. i'm also a really good eater
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                             <li class='email'><a href='mailto:alanszhang@berkeley.edu'>alanszhang@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
-                            tbh laminar flow is probably the most satisfying thing I can think of
+                            tbh laminar flow is probably the most satisfying thing I can think of tbh 
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                             <li class='email'><a href='mailto:dillon.yao@berkeley.edu'>dillon.yao@berkeley.edu</a></li>
                         </ul>
                         <div class='quote'>
-                            i'm eecs 
+                            i'm pursuing a dual degree in eecs and l&amp;s cs
                         </div>
                     </div>
                 </div>
